# lb1

./: CMakeLists.txt  lr_1.cpp
exceptions/: exceptions.h
linked_list/: LinkedList.cpp  LinkedList.h  Node.cpp  Node.h
txt/: exceptions.txt  input.txt  output.txt
week_07_cnn_and_fine_tuning/Homework/: hw_5_simpsons_classification.ipynb
